# KitchenClip

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  line199.txt  manage.py  pyproject.toml  testing.md
.github/workflows/: build-and-push.yml  ci.yml
KitchenClip/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
KitchenClip/middleware/: cloudflare.py
docs/: parser_guide.md
recipes/: admin.py  apps.py  forms.py  ingredient_processor.py  mixins.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py
recipes/backends/: cloudflare.py
recipes/management/commands/: reparse_recipes.py  send_cooking_summary.py
recipes/migrations/: 0001_initial.py  0002_alter_recipe_image_url_alter_recipe_rating.py  0003_alter_recipe_original_url.py  0004_remove_ingredient_category.py  0005_alter_recipetag_slug.py  0006_alter_recipetag_color.py  0007_alter_recipetag_color.py  0008_recipe_is_future.py  0009_mealplan.py  0010_mealplan_ready_at.py  0011_mealplan_notification_sent.py  0012_recipe_is_on_menu.py  0013_alter_recipe_original_url.py  0014_alter_recipe_is_future_alter_recipe_is_on_menu.py
recipes/parsers/: __init__.py  allrecipes.py  base.py  demo_parser.py  houseofnasheats.py  lesswithlaur.py  purelyyum.py  registry.py  scrapers_parser.py  utils.py
recipes/parsers/tests/: conftest.py  test_allrecipes.py  test_houseofnasheats.py  test_lesswithlaur.py  test_purelyyum.py  test_scrapers_parser.py
recipes/tests/: test_ingredient_processor.py  test_models.py  test_services.py  test_views.py
static/css/: meal_plan.css
static/js/: meal_plan.js  messages.js  nav.js  recipes_ui.js  sidebar.js  tag_input.js
static/recipes/js/: tag_input.js
templates/: base.html
templates/recipes/: _meal_slot.html  meal_plan.html  meal_plan_kiosk.html  recipe_confirm_delete.html  recipe_detail.html  recipe_form.html  recipe_list.html  recipe_manual_form.html
tests/e2e/: test_meal_plan_ui.py  test_recipe_crud_ui.py
(+6 files in other folders)
