[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitchenclip"
version = "0.1.0"
description = "A Django app for scraping and managing recipes"
authors = [
    { name = "Sam Oehlert", email = "sam.oehlert@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "ingredient-slicer>=1.2.21",
    "recipe-scrapers>=15.8.0",
    "whitenoise>=6.9.0",
]

[tool.hatch.build.targets.wheel]
packages = [
  "KitchenClip",
  "recipes"
]
