[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitchenclip"
version = "0.1.0"
description = "A Django app for scraping and managing recipes"
authors = [
    { name = "Sam Oehlert", email = "sam.oehlert@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "ingredient-slicer>=1.2.21",
    "recipe-scrapers>=15.8.0",
    "whitenoise>=6.9.0",
    "httpx>=0.28.1",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "flower>=2.0.1",
]

[tool.hatch.build.targets.wheel]
packages = [
  "KitchenClip",
  "recipes"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.3.0",
    "playwright>=1.42.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "KitchenClip.settings"
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v -W ignore::django.utils.deprecation.RemovedInDjango60Warning"
markers = [
    "recipe_fixture: Load HTML fixture for mocked recipe scraping"
]
filterwarnings = [
    # Message-based filter is often more robust for SyntaxWarnings occurring at import time
    "ignore:invalid escape sequence:SyntaxWarning",
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
]
